--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                      <i class=" icon-mobile-phone pull-left animated bounce"></i>
                      <div class="media-body">
                         <h3>
-                           Easy 
+                           Easy to understand
                         </h3>
                         <div>
                            A combination of American and British English, understood by everyone.
@@ -182,7 +182,7 @@
                      <i class=" icon-wrench pull-left animated bounce"></i>
                      <div class="media-body">
                         <h3>
-                           Essebtial Only
+                           Essential Only
                         </h3>
                         <div>
                            Essential Verbal Communication oriented lessons.
@@ -331,9 +331,9 @@
                   </div>
                   <div class="item">
                      <div class="testimonial media">
-                        <!--<div class="testimonial-avatar pull-right hidden-xs ">
-                           <img src="img/avatar/avatar-1.jpg" class="avatar size-default img-circle">
-                        </div>-->
+                        <div class="testimonial-avatar pull-right hidden-xs ">
+                           <img src="https://lh4.googleusercontent.com/-pPTQCJD5Mko/AAAAAAAAAAI/AAAAAAAAEKo/qg-h_WtJ_dM/s120-c/photo.jpg" class="avatar size-default img-circle">
+                        </div>
                         <div class="testimonial-content media-body">
                            <p class="lead">
                               This is one of  the most complete videos I've ever found about  English pronunciation. It covers a lot of -- if not all -- the possible sounds present in the language. ﻿
@@ -344,9 +344,9 @@
                   </div>
                   <div class="item">
                      <div class="testimonial media">
-                        <div class="testimonial-avatar pull-right hidden-xs ">
-                           <img src="https://lh4.googleusercontent.com/-pPTQCJD5Mko/AAAAAAAAAAI/AAAAAAAAEKo/qg-h_WtJ_dM/s120-c/photo.jpg" class="avatar size-default img-circle">
-                        </div>
+                        <!--<div class="testimonial-avatar pull-right hidden-xs ">
+                           <img src="img/avatar/avatar-1.jpg" class="avatar size-default img-circle">
+                        </div>-->
                         <div class="testimonial-content media-body">
                            <p class="lead">
                               Great! Very simple and the clearest hints ever. I do believe you that you are a rocket scientist. But it is a mixture of mostly American and some British English with lowered accent and you are calling it International English. In a way it is good for the speakers, everyone will understand them. But it is quite formal, and not how the guys on the streets talk. Do you have a lesson on various dialects/accents of English? Congratulations from the US.
